--- a/pom.xml
+++ b/pom.xml
@@ -19,15 +19,26 @@
 	</properties>
 
 	<dependencies>
-	<dependency>
-		<groupId>com.fasterxml.jackson.dataformat</groupId>
-		<artifactId>jackson-dataformat-xml</artifactId>
-	</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.dataformat</groupId>
+			<artifactId>jackson-dataformat-xml</artifactId>
+		</dependency>
+		<dependency>
+	    	<groupId>javax.validation</groupId>
+	    	<artifactId>validation-api</artifactId>
+		</dependency>
+		<dependency>
+      		<groupId>org.hibernate.validator</groupId>
+      		<artifactId>hibernate-validator</artifactId>
+      		</dependency>
+		<dependency>
+     		<groupId>org.glassfish</groupId>
+		    <artifactId>jakarta.el</artifactId>
+		    </dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
