--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,11 @@
 			<groupId>org.flywaydb</groupId>
 			<artifactId>flyway-core</artifactId>
 		</dependency>
+		<dependency>
+		  <groupId>org.modelmapper.extensions</groupId>
+		  <artifactId>modelmapper-spring</artifactId>
+		  <version>2.3.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
